feat.android support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(SCUSportQuery VERSION 0.1 LANGUAGES CXX)
+project(SCUSportQuery VERSION 0.2 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
@@ -12,15 +12,28 @@ qt_add_executable(appSCUSportQuery
     main.cpp
 )
 
+set(ANDROID_SOURCES
+    android/AndroidManifest.xml
+    android/build.gradle
+    android/res/values/libs.xml
+    android/res/xml/qtprovider_paths.xml
+    android/gradle/wrapper/gradle-wrapper.jar
+    android/gradle/wrapper/gradle-wrapper.properties
+    android/gradle.properties
+    android/gradlew
+    android/gradlew.bat
+)
+
 qt_add_qml_module(appSCUSportQuery
     URI SCUSportQuery
-    VERSION 1.0
+    VERSION 0.2
     QML_FILES
         Main.qml
         SOURCES SportQueryDBRead.h SportQueryDBRead.cpp
         RESOURCES
         SOURCES SportQuestion.h SportQuestion.cpp
         SOURCES SportQuestionListModel.h SportQuestionListModel.cpp
+        RESOURCES ${ANDROID_SOURCES}
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
@@ -45,3 +58,23 @@ install(TARGETS appSCUSportQuery
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
+
+if(ANDROID)
+    set(ANDROID_VERSION_NAME "0.2")
+    set(ANDROID_VERSION_CODE 2)
+
+    # 添加Android资源文件
+    set(QT_ANDROID_PACKAGE_SOURCE_DIR android)
+
+    # 构建前将question.db复制到android/assets目录
+    add_custom_command(TARGET appSCUSportQuery PRE_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/question.db
+        ${CMAKE_BINARY_DIR}/android-build-appSCUSportQuery/assets/question.db
+    )
+else()
+    # 构建后将question.db复制到构建目录的data目录
+    add_custom_command(TARGET appSCUSportQuery POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/question.db
+        ${CMAKE_BINARY_DIR}/data/question.db
+    )
+endif()
