--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on: push
 
 env:
   BUILD_TYPE: Release
-  QT_VERSION: '6.8.0'
+  QT_VERSION: '6.8.*'
   VCPKG_ROOT: '${{ github.workspace }}/vcpkg'
 
 jobs:
